--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "you-dont-know-npm",
+  "name": "open-open-source",
   "version": "1.0.0",
-  "description": "> a deck to take you beyond npm install",
+  "description": "learning how we can make open source, open",
   "main": "index.js",
   "scripts": {
     "start": "live-server ./"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ashleygwilliams/you-dont-know-npm.git"
+    "url": "https://github.com/Charlotteis/scotlandjs-talk.git"
   },
   "keywords": [],
-  "author": "ag_dubs",
+  "author": "charlotteis",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ashleygwilliams/you-dont-know-npm/issues"
+    "url": "https://github.com/Charlotteis/scotlandjs-talk/issues"
   },
-  "homepage": "https://github.com/ashleygwilliams/you-dont-know-npm",
+  "homepage": "https://github.com/Charlotteis/scotlandjs-talk",
   "devDependencies": {
     "live-server": "^0.9.1"
   }
